--- a/languages/stack/forth/articles.org
+++ b/languages/stack/forth/articles.org
@@ -1,3 +1,5 @@
+- 80 BYTE 08 https://archive.org/details/byte-magazine-1980-08/page/n2/mode/1up
+- 81 https://jupiter-ace.co.uk/Forth_general_practical_computing8108.html
 - 94? http://www.rigwit.co.uk/papers/literate.html
 - 99 | https://www.ultratechnology.com/1xforth.htm
 - 02 | https://www.ultratechnology.com/levels.htm
